- fixed some possible problem with url quotes
- if the download and renaming fails now the service stops working and doesn't continue
- add slash to folder path to prevent some fail

1.0.1
- added trick to rotate subtitles every download of the same subtitle (a workaround to a XBMC limit that doesn't support multiple subtitles)
- added missing checks and fixed a typo

1.0.0
- replaced website download with api download and improved "download too many times" check
- updated thetvdb ids
- added trick to force sync versions on top of the list
- bumped to first "official" version

0.0.5
- fixed bug with the retrieve tv show list function
- added fallback to filename search in case search by tv show name fails

0.0.4
- added notification in case of failed login, attempt to search other language than italian and attempt to search movies
- fixed check of WEB-DL quality with different namings

0.0.3
- fixed check for the normal (hdtv) version

0.0.2
- fixed a bug with a sync check and added the check for the normal (hdtv) version

0.0.1
- initial release