@@ -13,4 +13,5 @@
 	<string id="32008">ItaSA ha solo sottotitoli italiani. Aggiungete l'italiano nelle impostazioni sottotitoli</string>
 	<string id="32009">ItaSA funziona solo con sottotitoli di serie tv</string>
 	<string id="32010">Sottotitolo scaricato troppe volte</string>
+	<string id="32011">Nessun video in riproduzione, esco</string>
 </strings>
